# rose_arm_controller

./: .gitignore  readme.md
arm_controller/: CMakeLists.txt  package.xml
arm_controller/config/: arm_basic_properties.yaml  config.yaml  jaco_properties.yaml  mico_properties.yaml  robai_left_properties.yaml  robai_properties.yaml
arm_controller/include/arm_controller/: arm_controller.hpp  arm_controller_node.hpp
arm_controller/launch/: arms.launch  arms_moveit.launch
arm_controller/src/: arm_controller.cpp  arm_controller_node.cpp
arm_controller_base/: CMakeLists.txt  package.xml
arm_controller_base/include/arm_controller_base/: arm_controller_base.hpp
arm_controller_core/: CMakeLists.txt  package.xml
arm_controller_core/include/arm_controller/: arm_controller.hpp  arm_controller_node.hpp
arm_controller_core/src/: arm_controller_node.cpp
arm_controller_plugins/arm_controller_kinova_wpi/: CMakeLists.txt  jaco_plugin.xml  kinova_plugin.xml  mico_plugin.xml  package.xml
arm_controller_plugins/arm_controller_kinova_wpi/config/: fake_controllers.yaml  jaco.srdf  jaco_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml
arm_controller_plugins/arm_controller_kinova_wpi/include/arm_controller_jaco/: arm_controller_jaco.hpp
arm_controller_plugins/arm_controller_kinova_wpi/include/arm_controller_kinova/: arm_controller_kinova.hpp
arm_controller_plugins/arm_controller_kinova_wpi/include/arm_controller_mico/: arm_controller_mico.hpp
arm_controller_plugins/arm_controller_kinova_wpi/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  jaco_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_and_execution.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
arm_controller_plugins/arm_controller_kinova_wpi/src/: arm_controller_jaco.cpp  arm_controller_kinova.cpp  arm_controller_mico.cpp
arm_controller_plugins/arm_controller_mico/: CMakeLists.txt  package.xml
arm_controller_plugins/arm_controller_mico/include/arm_controller_mico/: arm_controller_mico.hpp
arm_controller_plugins/arm_controller_mico/src/: arm_controller_mico.cpp
arm_controller_plugins/arm_controller_robai/: CMakeLists.txt  package.xml  robai_plugin.xml
arm_controller_plugins/arm_controller_robai/config/: manipulate_action.xml  move_arm_action_template.xml  move_gripper_action_template.xml  move_joints_action_template.xml  move_object_action_template.xml
arm_controller_plugins/arm_controller_robai/include/arm_controller_robai/: arm_controller_robai.hpp  robai_manipulation_action.hpp  wait.hpp
arm_controller_plugins/arm_controller_robai/src/: arm_controller_robai.cpp  robai_manipulation_action.cpp  wait.cpp
arm_visual_servoing/: CMakeLists.txt  package.xml
arm_visual_servoing/include/arm_visual_servoing/: arm_visual_servoing.hpp  arm_visual_servoing_node.hpp
arm_visual_servoing/launch/: visual_servoing.launch
arm_visual_servoing/src/: arm_visual_servoing.cpp  arm_visual_servoing_node.cpp
doc/tests/: tests_aachen.md  tests_rose_arm_controller.md  tests_rose_moveit.md  tests_wpi_jaco.md
doc/tests/20150223 rosebv/: tests_rose.md  tests_wpi_jaco.md
doc/tests/launch/: test_all.launch  test_moveit_wpi.launch  test_moveit_wpi_mico.launch  test_rose_moveit_controller.launch  test_visual_servoing.launch  test_visual_servoing_rotated.launch  test_wpi_jaco.launch
rose_arm_controller/: CMakeLists.txt  package.xml
rose_arm_controller_msgs/: CMakeLists.txt  package.xml
rose_arm_controller_msgs/action/: move_to_tf.action  set_gripper_width.action  set_position.action  set_velocity.action  set_wrench.action
rose_arm_controller_msgs/srv/: emergency_stop.srv  get_arms.srv  reset_emergency_stop.srv
testing/: valid_location.txt
