<?xml version="1.0"?>
<package>
  <name>arm_controller</name>
  <version>0.0.1</version>
  <description>The main arm_controller package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_controller_base</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_arm_controller_msgs</build_depend>
  <build_depend>rose_watchdogs</build_depend>
  <build_depend>rose_shared_variables</build_depend>
  <build_depend>rose_transformations</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>arm_controller_base</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_arm_controller_msgs</run_depend>
  <run_depend>rose_watchdogs</run_depend>
  <run_depend>rose_shared_variables</run_depend>
  <run_depend>rose_transformations</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>tf</run_depend>
</package>
