<?xml version="1.0"?>
<package>
  <name>arm_visual_servoing</name>
  <version>0.0.1</version>
  <description>The arm_visual_servoing package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rose_arm_controller_msgs</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rose_arm_controller_msgs</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>