<?xml version="1.0"?>
<package>
  <name>arm_controller_kinova_wpi</name>
  <version>0.0.1</version>
  <description>The arm_controller_kinova_wpi plugin package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_controller_base</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jaco_description</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_arm_controller_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  
  <run_depend>arm_controller_base</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>jaco_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_arm_controller_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <arm_controller_base plugin="${prefix}/mico_plugin.xml" />
    <arm_controller_base plugin="${prefix}/jaco_plugin.xml" />
    <arm_controller_base plugin="${prefix}/kinova_plugin.xml" />
  </export>
</package>